--- a/Ki4C_Solution/Views/Member/Diagnosis/SelectedDiagnosisEvaluation.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/SelectedDiagnosisEvaluation.cshtml
@@ -68,9 +68,9 @@
 <!-- 섹션 -->
 <section>
     <!-- 콘텐츠 -->
-    <div id=contetns style="width: 100%;">
+    <div id=contents style="width: 100%;">
         <h2>진단 결과 보고서</h2>
-        <br />
+        <br>
         <div id="menuIdx">
             <div style="float: left;">
                 <img id=home_img src="~/images/home-1.png">
@@ -82,7 +82,7 @@
             진단 평가
         </div>
         <br>
-        <hr style="border: solid 0.5px black; width: 100%;" />
+        <hr width: 100%;" /> <br>
         <!-- 진단결과 보고서 -->
         <div style="display: inline-block;">
             <div style="width: 90%; margin: auto; background-color: aliceblue;">
