--- a/Ki4C_Solution/Views/Member/Mypage/MyInfoUpdate.cshtml
+++ b/Ki4C_Solution/Views/Member/Mypage/MyInfoUpdate.cshtml
@@ -34,7 +34,7 @@
         font-size: 14px;
         font-weight: 600;
         color: white;
-        background-color: #34B0C7;
+        background-color: #2B92D5;
         border: none;
         width: 130px;
         height: 30px;
