--- a/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
@@ -18,16 +18,6 @@
         color: white;
         font-weight: 700;
     }
-/*    #table {
-        border: "1";
-        width: 800px; height: 100px;
-        text-align: center;
-        background-color:skyblue; border-color: white;
-        table-layout: fixed;
-    }
-    td {
-        word-wrap: break-word;
-    }*/
     #mypageButton {
         width: 70px;
         height: 20px;
@@ -100,6 +90,51 @@
         .menu a {
             padding-left: 10px;
         }
+    .inputType1 {
+        width: 150px;
+        height: 25px;
+        border: solid 0.5px #2B92D5;
+        border-radius: 10px;
+        padding: 2px;
+    }
+    .inputType2 {
+        width: 500px;
+        height: 25px;
+        border: solid 0.5px #2B92D5;
+        border-radius: 10px;
+        padding: 2px;
+    }
+    .btnType1 {
+        font-size: 14px;
+        font-weight: 500;
+        color: white;
+        background-color: #2B92D5;
+        border: none;
+        width: 80px;
+        height: 30px;
+        border-radius: 20px;
+    }
+
+    .btnType2 {
+        font-size: 14px;
+        font-weight: 500;
+        color: white;
+        background-color: #2B92D5;
+        border: none;
+        width: 100px;
+        height: 30px;
+        border-radius: 20px;
+    }
+
+    select {
+        width: 150px;
+        height: 20px;
+        padding: 3px;
+        margin-top: 10px;
+        border: solid 0.3px #34B0C7;
+        border-radius: 0.5em;
+        box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+    }
     @@media (max-width: 768px){
         #table {
             width: 100%;
@@ -109,6 +144,9 @@
         }
         #buttonLocation {
             margin-right: 10px;
+        }
+        .inputType2 {
+            width: 150px;
         }
     }
 </style>
