--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationMeasurement.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationMeasurement.cshtml
@@ -41,20 +41,20 @@
         <div style="padding-top: 30px; padding-left: 30px; height: 200px;">
             <a>평가척도 코드: </a>
             <div style="padding-top: 10px; display: inline-block;">
-                <input type="text"
+                <input class="inputType1" type="text"
                        style="max-width: 400px; width: 130%; height: 25px; font-size: 16px;
                         margin-bottom: 3px;" id="MeasurementCode" />
             </div>
             <br>
             <a>평가척도명: </a>
             <div style="padding-top: 10px; display: inline-block;">
-                <input type="text"
+                <input class="inputType1" type="text"
                        style="max-width: 400px; width: 130%; height: 25px; font-size: 16px;
                         margin-bottom: 3px;" id="MeasurementName" />
             </div>
             <div style="padding-top: 30px; padding-left: 50px;">
-                <input id="registButton" type="submit" value="등록" />
-                <input id="modifyButton" type="submit" value="수정" />
+                <input class="btnType1" id="registButton" type="submit" value="등록" />
+                <input class="btnType1" id="modifyButton" type="submit" value="수정" />
             </div>
         </div>
         <!-- 진단 평가영역 등록 -->
@@ -62,8 +62,8 @@
         <!-- 진단 평가영역 목록 -->
         <div style="display: inline-block;">
             <div id="buttonLocation">
-                <input type="text" placeholder="검색어 입력" />
-                <button id="searchButton">검색</button>
+                <input class="inputType1" type="text" placeholder="검색어 입력" />
+                <button class="btnType1" id="searchButton">검색</button>
             </div>
             <br>
             <div style="width: 90%; margin: auto;">
@@ -71,7 +71,7 @@
                 </table>
             </div>
             <div id="buttonLocation">
-                <input id="deleteButton" type="submit" value="항목 삭제" />
+                <input class="btnType2" id="deleteButton" type="submit" value="항목 삭제" />
             </div>
         </div>
         <!-- 입력 형식 -->
