--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisLevel.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisLevel.cshtml
@@ -2,7 +2,7 @@
     // Used Table [Member]
     // 고객관리시스템 - 고객목록
     // 선행작업 - 관리자 로그인
-    Layout = "~/Views/Shared/_LayoutKi4C_Aside_dg_ev_mgnt.cshtml";
+    Layout = "~/Views/Shared/_LayoutKi4C_Aside_dg.cshtml";
     ViewData["Title"] = "기준정보 관리/진단 종류";
 }
 <!-- 섹션 -->
@@ -27,20 +27,20 @@
         <div style="padding-top: 30px; padding-left: 30px; height: 200px;">
             <a>진단 수준 코드: </a>
             <div style="padding-top: 10px; display: inline-block;">
-                <input type="text"
+                <input class="inputType1" type="text"
                        style="max-width: 400px; width: 130%; height: 25px; font-size: 16px;
                         margin-bottom: 3px;" id="DiagnosisLevelCode" />
             </div>
             <br>
             <a>진단 수준 명: </a>
             <div style="padding-top: 10px; display: inline-block;">
-                <input type="text"
+                <input class="inputType1" type="text"
                        style="max-width: 400px; width: 130%; height: 25px; font-size: 16px;
                         margin-bottom: 3px;" id="DiagnosisLevelName" />
             </div>
             <div style="padding-top: 30px; padding-left: 50px;">
-                <input id="registButton" type="submit" value="등록" />
-                <input id="modifyButton" type="submit" value="수정" />
+                <input class="btnType1" id="registButton" type="submit" value="등록" />
+                <input class="btnType1" id="modifyButton" type="submit" value="수정" />
             </div>
         </div>
         <!-- 진단수준 등록 -->
@@ -48,13 +48,13 @@
         <!-- 진단수준 목록 -->
         <div style="display: inline-block;">
             <div id="buttonLocation">
-                <input type="text" id="searchBox" placeholder="검색어 입력" />
-                <button id="searchButton">검색</button>
+                <input class="inputType1" type="text" id="searchBox" placeholder="검색어 입력" />
+                <button class="btnType1" id="searchButton">검색</button>
             </div>
             <br>
             <div style="width: 90%; margin: auto;">
                 <table id="table">
-                    <tr align="center" bgcolor="skyblue">
+                    <tr id="header" align="center" bgcolor="#34B0C7">
                         <td>번호</td>
                         <td>진단수준코드</td>
                         <td>진단수준명</td>
@@ -100,7 +100,7 @@
                 <table id="DiagnosisLevelList" class="display"></table>
             </div>
             <div id="buttonLocation">
-                <input id="deleteButton" type="submit" value="항목 삭제" />
+                <input class="btnType2" id="deleteButton" type="submit" value="항목 삭제" />
             </div>
         </div>
         <!-- 진단수준 목록 -->
