--- a/Ki4C_Solution/Views/Member/Diagnosis/SelfDiagnosis.cshtml
+++ b/Ki4C_Solution/Views/Member/Diagnosis/SelfDiagnosis.cshtml
@@ -14,6 +14,16 @@
             width: 105%;
         }
     }
+    .btnType1 {
+        font-size: 14px;
+        font-weight: 500;
+        color: white;
+        background-color: #2B92D5;
+        border: none;
+        width: 130px;
+        height: 30px;
+        border-radius: 20px;
+    }
 </style>
 
 <!-- 섹션 -->
@@ -35,7 +45,7 @@
                 <input type="checkbox" />당사는 상기 내용에 따른 정보 수집 및 이용에 동의합니다.
             </div>
             <div style="padding-top: 30px; padding-bottom: 30px;">
-                <button onclick="location.href='/MemberDiagnosis/CompanyBasicInformation'" id="startButton" type="button" asp-area="" asp-controller="MemberDiagnosis" asp-action="CompanyBasicInformation">진단 시작하기</button>
+                <button class="btnType1" onclick="location.href='/MemberDiagnosis/CompanyBasicInformation'" id="startButton" type="button" asp-area="" asp-controller="MemberDiagnosis" asp-action="CompanyBasicInformation">진단 시작하기</button>
             </div>
         </div>
     </div>
