--- a/Ki4C_Solution/Views/Member/Mypage/MyInfoRead.cshtml
+++ b/Ki4C_Solution/Views/Member/Mypage/MyInfoRead.cshtml
@@ -17,7 +17,7 @@
         font-size: 12px;
         font-weight: 500;
         color: white;
-        background-color: #34B0C7;
+        background-color: #2B92D5;
         border: none;
         width: 80px;
         height: 25px;
