--- a/Ki4C_Solution/Views/Shared/_Aside_dg_ev_mgnt.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_dg_ev_mgnt.cshtml
@@ -18,6 +18,7 @@
         color: white;
         font-weight: 700;
     }
+
     #mypageButton {
         width: 70px;
         height: 20px;
@@ -39,10 +40,12 @@
         border: none;
         border-radius: 30px;
     }
+
     #buttonLocation {
         float: right;
         margin-right: -50px;
     }
+
     #menuBox {
         padding: 5px;
         width: 90%;
@@ -88,6 +91,60 @@
         .menu a {
             padding-left: 10px;
         }
+
+    #buttonLocation {
+        float: right;
+        margin-right: -50px;
+    }
+
+    .inputType1 {
+        width: 150px;
+        height: 25px;
+        border: solid 0.5px #2B92D5;
+        border-radius: 10px;
+        padding: 5px;
+    }
+
+    .btnType1 {
+        font-size: 12px;
+        font-weight: 500;
+        color: white;
+        background-color: #2B92D5;
+        border: none;
+        width: 80px;
+        height: 25px;
+        border-radius: 20px;
+    }
+
+    .btnType2 {
+        font-size: 12px;
+        font-weight: 500;
+        color: white;
+        background-color: #2B92D5;
+        border: none;
+        width: 130px;
+        height: 25px;
+        border-radius: 20px;
+    }
+
+    select {
+        width: 150px;
+        height: 20px;
+        padding: 3px;
+        margin-top: 10px;
+        border: solid 0.3px #34B0C7;
+        border-radius: 0.5em;
+        box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+    }
+    @@media (max-width: 768px) {
+        #table {
+            width: 100%;
+        }
+
+        #buttonLocation {
+            margin-right: 10px;
+        }
+    }
 </style>
 <aside>
     <div style="padding: 10px; height: 80px; line-height: 30px; background: white;">
